--- a/css/style.css
+++ b/css/style.css
@@ -191,12 +191,12 @@ header .logo img {
     cursor: pointer;
 }
 
-.play img{
+.play img {
     margin-right: 10px;
     max-width: 50px;
 }
 
-.trailer{
+.trailer {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -207,16 +207,16 @@ header .logo img {
     display: flex;
     justify-content: center;
     align-items: center;
-   
-    
+
+
 }
 
-.trailer video{
+.trailer video {
     max-width: 800px;
     outline: none;
 }
 
-.close{
+.close {
     position: absolute;
     top: 30px;
     right: 30px;
@@ -225,50 +225,86 @@ header .logo img {
     max-width: 32px;
 }
 
-@media (max-width: 991px){
-    header{
-       padding: 20px 50px;
-       flex-direction: column;
+@media (max-width: 991px) {
+    header {
+        padding: 20px 50px;
+        flex-direction: column;
     }
-    .navigation{
+
+    .banner .bg-mula {
+        left: -48px;
+        width: 108%;
+        height: 1293px;
+
+    }
+
+    .navigation {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
         margin: 10px 0;
     }
 
-    .banner{
+    .banner {
         padding: 100px 50px;
     }
-    .banner ,.play{
+
+    .banner,
+    .play {
         left: 50px;
     }
 
-    .play img{
+    .play img {
         margin-right: 10px;
         max-width: 40px;
     }
 
-    .trailer video{
+    .trailer video {
         max-width: 90%;
     }
 }
 
-@media (max-width: 600px){
-    header{
+
+@media (max-width: 825px) {
+    .banner .bg-mula {
+        left: -47px;
+        width: 107%;
+        
+
+    }
+}
+
+@media (max-width: 600px) {
+    header {
         padding: 20px;
     }
 
-    .serch{
+    .serch {
         width: calc(100% - 20px);
     }
 
-    .banner{
+    .content {
+        max-width: 513px;
+    }
+
+    .banner {
+        left: 0px;
         padding: 220px 20px 120px;
     }
-    .play{
+
+    .play {
         left: 20px;
         font-size: 1em;
         bottom: 30px;
+    }
+
+
+}
+
+@media (max-width: 415px) {
+    .banner .bg-mula {
+        left: 0px;
+        width: 100%;
+        height: 100%
     }
 }
